$Id$

2003-01-24 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/eplayer.c, src/plugin.c: Switched to libltdl

2003-12-28 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/callbacks.c, src/playlist.c, src/interface.c,
          data/README: Added PLAYLIST_ITEM_REMOVE (thanks to atmos).

2003-12-07 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/output/alsa/alsa.c: make sure changes made to the
          mixer levels w/ other applications (like alsamixer) are
          reflected in eplayer
        * src/eplayer.c, src/track.c, src/interface.c:
          update the track info parts etc on group switch
        * src/interface.c, src/callbacks.[ch], data/README:
          added STOP signal

2003-12-04 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/eplayer.c: eplayer.db lives in ~/.e/apps/eplayer now
        * data/themes/default/default.edc: Added repeat mode toggle
          button

2003-11-30 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/data/eplayer.edc: Added "small" (collapsed) mode
          to the eplayer theme (thanks to digitalfallout!).
          Fixed indentation as well.

2003-11-24 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/interface.[ch], scr/callbacks.[ch], data/README:
          Added SWITCH_GROUP edje signal

2003-11-18 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/interface.c, src/eplayer.c, src/eplayer.h:
          The theme that's to be used can now be set in eplayer.db

2003-11-17 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/playlist.c: Fixed playlist_load_dir()
        * src/interface.c, data/README:
          Added QUIT signal, thanks to digitalfallout
        * src/interface.c, src/callbacks.c, data/README:
          Updated playlist scrolling signals/code, added
          PLAYLIST_ITEM_PLAY

2003-11-15 Tilman Sauerbeck <tilman@code-monkey.de>
        * src/interface.c: Fixed playlist scrolling
        * src/interface.c, src/callbacks.c, data/README: