@@ -36,7 +36,6 @@ EDJE_CB(playlist_item_remove);
 EDJE_CB(playlist_item_selected);
 
 EDJE_CB(eplayer_quit);
-EDJE_CB(eplayer_raise);
 EDJE_CB(switch_group);
 
 EDJE_CB(update_seeker);
