@@ -52,18 +52,28 @@ static void cb_ee_resize(Ecore_Evas *ee) {
 	evas_object_resize(dragger, (Evas_Coord) w, (Evas_Coord) h);
 }
 
+static void cb_dragger_mouse_up(void *data, Evas *evas, Evas_Object *o,
+                                void *ev) {
+	ePlayer *player = data;
+
+	ecore_evas_raise(player->gui.ee);
+}
+
 static int ui_init_dragger(ePlayer *player) {
 	Evas_Object *dragger;
 
-	if (!(dragger = esmart_draggies_new (player->gui.ee)))
+	if (!(dragger = esmart_draggies_new(player->gui.ee)))
 		return 0;
 
-	esmart_draggies_button_set (dragger, 1);
+	esmart_draggies_button_set(dragger, 1);
 
-	evas_object_name_set (dragger, "dragger");
-	evas_object_move (dragger, 0, 0);
-	evas_object_layer_set (dragger, 9999);
-	evas_object_show (dragger);
+	evas_object_name_set(dragger, "dragger");
+	evas_object_move(dragger, 0, 0);
+	evas_object_layer_set(dragger, 9999);
+	evas_object_show(dragger);
+
+	esmart_draggies_event_callback_add(dragger, EVAS_CALLBACK_MOUSE_UP,
+	                                   cb_dragger_mouse_up, player);
 
 	return 1;
 }
@@ -214,8 +224,6 @@ static void register_callbacks(ePlayer *player) {
 	EdjeCallback cb[] = {
 		{"QUIT", "*",
 		 (EdjeCb) cb_eplayer_quit},
-		{"RAISE", "*",
-		 (EdjeCb) cb_eplayer_raise},
 		{"PLAY_PREVIOUS", "*",
 		 (EdjeCb) cb_track_prev},
 		{"PLAY_NEXT", "*",
